week9/k8s/kk-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kk-api
  namespace: kijani-project
  annotations:
    kubernetes.io/change-cause: "Initial deployment: v1.0.0"
spec:
  replicas: 2
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: kk-api
  template:
    metadata:
      labels:
        app: kk-api
    spec:
      containers:
      - name: kk-api
        image: nginx:alpine
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "250m"
            memory: "128Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 20
