week9/k8s/kk-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kk-api
  namespace: kijani-project
spec:
  type: ClusterIP
  selector:
    app: kk-api
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
